apps/firefox-sync/firefox-sync/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefox-sync
  namespace: firefox-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firefox-sync
  template:
    metadata:
      labels:
        app: firefox-sync
        app.kubernetes.io/name: firefox-sync
    spec:
      containers:
        - name: firefox-sync
          image: mozilla/syncstorage-rs:0.13.7
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          resources:
            limits:
              memory: 200Mi
            requests:
              cpu: '1m'
              memory: 200Mi
          livenessProbe:
            httpGet:
              path: "/__heartbeat__"
              port: http
              scheme: HTTP
            initialDelaySeconds: 5
            successThreshold: 1
            failureThreshold: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
