apps/firefox-sync/firefox-sync/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: firefox-sync
  namespace: firefox-sync
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: http
  selector:
    app: firefox-sync
